syntax = "proto3";

//option java_package = "events.test";
package  events.test.form;

message FormReceived {
}

message SearchResult {
    repeated string result = 1;
    int32 number_of_results = 2;
}
